<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Rózsafüzér magyarul</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Close</string>
    <string name="title_activity_main">Rosary - Ave Maria</string>
    <string name="happy">happy</string>
    <string name="luminous">luminous</string>
    <string name="Sad">Sad</string>
    <string name="Glory">Glory</string>
    <string name="Start">Start</string>
    <string name="Today">Today Rosary suggested</string>
    <string name="todayprayer">Today Prayer</string>
    <string name="Home">Alap.</string>
    <string name="tvHappy">tvHappy</string>
    <string name="Count"></string>
    <string name="previous">Elő.</string>
    <string name="Next">Köv.</string>
    <string name="tvDisplayPrayer"></string>

</resources>
