<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical" >
    
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="129dp" >

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="83dp"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:src="@drawable/cross" />



        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="54dp"
            android:textSize="60dp"
            android:text="@string/Count"
            android:textAppearance="?android:attr/textAppearanceLarge" />

    </RelativeLayout>
    
      <TextView
        android:id="@+id/tvDisplayPrayer"
        android:layout_width="match_parent"
        android:layout_height="248dp"
        android:text="@string/tvDisplayPrayer" />






    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="100dp" >

        <Button
            android:id="@+id/Prv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/previous"
            android:textSize="25dp" />

        <Button
            android:id="@+id/Next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/Prv"
            android:layout_alignBottom="@+id/Prv"
            android:layout_alignParentRight="true"
            android:layout_marginRight="14dp"
            android:text="@string/Next"
            android:textSize="25dp" />

        <Button
            android:id="@+id/Home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="18dp"
            android:text="@string/Home"
            android:textSize="25dp" />
    </RelativeLayout>
    
    

</LinearLayout>
